--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
             <div class="logo"><img src="./Group 3614.png" alt="logo-cofe"></div>
             <ul class="ur-1">
-                <li class="li-3"><a class="li-4" href="#">HOME</a></li>
+                <li class="li-3"><a class="li-4" href="http://mrjavohir23.github.io/Cofe-a/">HOME</a></li>
                 <li class="li-3"><a class="li-4" href="#">ABOUT US</a></li>
                 <li class="li-3"><a class="li-4" href="#">Create your plan</a></li>
             </ul>
@@ -57,7 +57,7 @@
         <div class="logo-1"><img src="./Group 3614.png" alt=""></div>
 
 <ul class="li-8">
-    <li class="li-1"><a class="li-1" href="#">HOME</a></li>
+    <li class="li-1"><a class="li-1" href="http://mrjavohir23.github.io/Cofe-a/">HOME</a></li>
     <li class="li-1"><a class="li-1" href="#">ABOUT US</a></li>
     <li class="li-1"><a class="li-1" href="#">Create your plan</a></li>
 
